cc_library(
    name = "network_isolation_cc",
    srcs = ["network_isolation.cc"],
    hdrs = ["network_isolation.h"],
    visibility = ["//visibility:public"],
)

cc_binary(
    name = "isolate",
    srcs = ["isolate.cc"],
    deps = [
        ":network_isolation_cc",
    ],
    visibility = ["//visibility:public"],
)
