cc_library(
    name = "network_isolation_cc",
    srcs = ["network_isolation.cc"],
    hdrs = ["network_isolation.h"],
    visibility = ["//visibility:public"],
)

cc_binary(
    name = "isolate",
    srcs = ["isolate.cc"],
    deps = [
        ":network_isolation_cc",
    ],
    visibility = ["//visibility:public"],
)

# Create a CPython extension
cc_binary(
    name = "libnetwork_isolation_py.so",
    linkshared = True,
    linkstatic = False,
    srcs = ["network_isolation_py.cc"],
    deps = ["@python//:python_cc"],
)

py_library(
    name = "libnetwork_isolation_py",
    data = [":libnetwork_isolation_py.so"],
    visibility = ["//visibility:public"],
)
